--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="overflow-x-clip mr-[0.5px]"></div>
+    <div id="root" class="overflow-x-clip mr-[0.5px] flex flex-col "></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
