--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon_cec.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no" />
-    <title>Vite + React</title>
+    <title>College of Engineering Chengannur</title>
   </head>
   <body>
     <div id="root" class="relative overflow-x-hidden mr-[0.5px] flex flex-col h-fit ">
